# bsl-coach

./: .gitignore  AGENTS.md  README.md  architect-chat-starter-prompt.md  project-start.md  pyproject.toml
docs/: API.md  ARCHITECTURE.md  LEDGER_RECIPE.md  SIZING_RECIPE.md  TV_MCP_SETUP.md  VALIDATION.md
journal/: 2026-07-02.md  2026-07-06.md  watchlist.md
journal/tickers/: CRCL.md  HOOD.md  MSTR.md
pine/: bsl_pm_watchlist_2026-07-02.pine  bsl_pm_watchlist_2026-07-06.pine
planning/: ARCHITECT_BRIEFING.md  DECISIONS.md  DOMAIN.md  FILE_INVENTORY.md  INTAKE.md  QUESTIONS.md  RISKS.md  STATE.md  STATUS.json
planning/architect-packs/: architect-pack-001-discovery.md  architect-pack-002-ledger.md  architect-pack-003-pm-parser.md
planning/memory/: README.md  dashboard-chart-no-overlap.md  execution-stack.md  ibkr-claude-connector.md  risk-framework.md
planning/sprints/001-discovery-architecture/: acceptance.md  blueprint.md  handoff-prompt.md  requirements.md
planning/sprints/002-position-sizing-calculator/: CLOSEOUT.md  (+4 more)
references/client-docs/: 07_02_2026 PM Planning transcript.md  07_06_2026 PM Planning transcript.txt
samples/: account_snapshot.example.json  bsl_registry.example.json  trades_snapshot.example.json
scripts/: file_pm_planning.py
src/bsl_coach/: __init__.py  cli.py  cli_ledger.py  ledger.py  registry.py  risk_math.py  snapshot.py  trades.py
tests/: test_cli.py  test_cli_ledger.py  test_guardrails.py  test_ledger.py  test_registry.py  test_risk_math.py  test_snapshot.py  test_trades.py
tests/fixtures/: now_2026_07_01_fills.json
(+9 files in other folders)
